[package]
authors = ["Zhenyuan Zhang <cryscan@umich.edu>"]
categories = ["science", "text-processing"]
description = "An implementation of the RWKV language model in pure WebGPU."
edition = "2021"
exclude = ["assets/", "crates/", "screenshots/"]
homepage = "https://github.com/cryscan/web-rwkv"
keywords = ["deep-learning", "language", "model", "rwkv"]
license = "MIT OR Apache-2.0"
name = "web-rwkv-realweb"
repository = "https://github.com/cryscan/web-rwkv"
version = "0.1.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bitflags = "2.6"
bytemuck = { version = "1.17", features = ["extern_crate_alloc"] }
derive-getters = "0.5"
fastrand = { version = "2.1", features = ['js'] }
flume = "0.11"
futures = "0.3.31"
half = { version = "2.4", features = ["bytemuck"] }
itertools = "0.13"
js-sys = "0.3"
lazy_static = "1.5"
log = "0.4"
regex = "1.10"
safetensors = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uid = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Blob", "console"] }

[dependencies.web-rwkv]
default-features = false
features = ["web"]
# path = "../web-rwkv"
version = "0.9.1"

[lib]
crate-type = ["cdylib", "rlib"]
